--- a/index.html
+++ b/index.html
@@ -73,10 +73,9 @@
 <!-- All content goes here -->
 <div>
     
-        <h1>Hallebot's Glorious Website</h1>
     
     <nav>
-        <h1>Hallebot's Glorious Website</h1>
+        <h1>Calvin's Website</h1>
         <ul>
             <li>
               <a href="index.html"> Home </a>
@@ -90,15 +89,14 @@
     <main>
         <!-- Sidebar section -->
         <div>
-            <img src="" alt="">
-            <img src="https://github.com/OperationSpark/first-website-hs-beta/blob/master/img/hallebot.png?raw=true">
+            <img src="https://i.pinimg.com/564x/84/18/09/84180943924e3b99cefccad12ecf75a6--hd-picture-blue-backgrounds.jpg" alt="">
 
         </div>
 
         <!-- Content section -->
         <div>
             <h2> calvin's website </h2>
-            <p>im a highschool student at frederick Douglass who loves to play basketball every single day </p>
+            <p> im a highschool student at frederick Douglass who loves to play basketball every single day </p>
             <!-- Interests section -->
             <div>
                 <h3>Interests</h3>
