--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,7 +8,7 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: blue;
 			font-size: 300%;
 			text-align: center;
 			display: block;
@@ -18,7 +18,8 @@
 		}
 		.board{
 			height: 100vh;
-		}
+		background-color: black;
+	}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 
@@ -48,6 +49,7 @@
 
 			// moves the Box to a new position on the screen along the X-Axis
 			function moveBoxTo(newPositionX) {
+				console.log ("the box is being moved") ;
 				box.css("left", newPositionX);
 			}
 
@@ -61,7 +63,7 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
+			var location = 0;
 
 			
 			/* 
@@ -70,8 +72,8 @@
 			turn it around! 
 			*/
 			function update() {
-				
-
+				moveBoxTo (location);
+location = location + 10;
 			};
 
 			/* 
