--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<title>Bouncing Box</title>
@@ -14,42 +15,45 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
+			left: 0px;
+			/* <--- Change me! */
 		}
-		.board{
+
+		.board {
 			height: 100vh;
-		background-color: black;
-	}
+			background-color: black;
+		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 
 </head>
+
 <body class="board">
 	<!-- HTML for the box -->
 	<div class="box">?</div>
 
 	<script>
-		(function(){
+		(function () {
 			'use strict'
 			/* global jQuery */
 
 			//////////////////////////////////////////////////////////////////
 			/////////////////// SETUP DO NOT DELETE //////////////////////////
 			//////////////////////////////////////////////////////////////////
-			
+
 			var box = jQuery('.box');	// reference to the HTML .box element
 			var board = jQuery('.board');	// reference to the HTML .board element
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
 
 			// Every 50 milliseconds, call the update Function (see below)
 			setInterval(update, 50);
-			
+
 			// Every time the box is clicked, call the handleBoxClick Function (see below)
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
 			function moveBoxTo(newPositionX) {
-				console.log ("the box is being moved") ;
+
 				box.css("left", newPositionX);
 			}
 
@@ -61,19 +65,27 @@
 			//////////////////////////////////////////////////////////////////
 			/////////////////// YOUR CODE BELOW HERE /////////////////////////
 			//////////////////////////////////////////////////////////////////
-			
-			// TODO 2 - Variable declarations 
-			var location = 0;
 
-			
+			// TODO 2 - Variable declarations 
+			var location = 0; 
+			var speed = 5;
+			var points = 0;
+
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
 			function update() {
-				moveBoxTo (location);
-location = location + 10;
+				moveBoxTo(location);
+				location = location + speed;
+				if (location >boardWidth )  {
+					speed = -speed 
+				}
+				if (location < 0){
+					speed = - speed 
+				}
+
 			};
 
 			/* 
@@ -81,12 +93,21 @@ location = location + 10;
 			it should increase the points total, increase the speed, and move the box to
 			the left side of the screen.
 			*/
-			function handleBoxClick() {
+			function handleBoxClick() { 
+			
+				console.log("box was clicked");
+				location = 0;
+				// write a line to increase points by 1
+				points= points +1;
 				
-
+				changeBoxText(points);
+				if (speed > 0){
+					speed = speed + 2
+				}
 
 			};
 		})();
 	</script>
 </body>
+
 </html>
