make box bounce

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -83,7 +83,7 @@
 					speed = -speed 
 				}
 				if (location < 0){
-					speed = - speed 
+					speed =  -speed 
 				}
 
 			};
@@ -105,7 +105,7 @@
 					speed = speed + 2
 				}
 				else {
-					speed = speed-2h
+					speed = speed -2
 				}
 
 			};
